<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <ImageView
        android:id="@+id/edit_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/primary_light"/>

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/ItemStyle"
            android:text="@string/item_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Amount category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/ItemStyle"
            android:text="@string/hint_item_amount" />

        <!-- Input fields -->
        <Button
            android:id="@+id/btn_less"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/activity_margin"
            android:background="@color/primary"
            android:layout_gravity="center"
            android:onClick="lessItem"
            android:text="-"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"/>


            <!-- Amount field -->

            <TextView
                android:id="@+id/edit_item_number"
                style="@style/EditorAmountStyle"
                android:text="0"/>


        <Button
            android:id="@+id/btn_more"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/activity_margin"
            android:background="@color/primary"
            android:layout_gravity="center"
            android:onClick="moreItem"
            android:text="+"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"/>

    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/ItemStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <!-- Units for price ($) -->
            <TextView
                android:id="@+id/label_price_units"
                style="@style/EditorPriceStyle"
                android:text="@string/unit_price" />
        </RelativeLayout>
    </LinearLayout>

    <!-- email category -->
    <LinearLayout
        android:id="@+id/container_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/ItemStyle"
            android:text="@string/category_mail" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Mail field -->
            <EditText
                android:id="@+id/edit_item_mail"
                style="@style/EditorFieldStyle"
                android:text="@string/default_mail"
                android:inputType="textCapWords" />

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>